# pdbe_shape_retrieval

./: .requirements.txt.swp  README.md  requirements.txt  setup.cfg  shape_clustering.ipynb  shape_descriptors.ipynb
analysis_tools/: #visualisation_correspondence.py#  clustering.py  pyvol_trajectory.py  superposition_shapes.py  superposition_spectral.py  visualisation_correspondence.py
example_data/clustering_data/: list_entries.txt  pairs_scores.txt  spectral_scores.txt
example_data/clustering_data/complexes/: Complexes_shape_clustering.html  Complexes_shape_similarity_clustering.html
example_data/clustering_data/complexes/Bacterial_ribosome/: list_entries.txt  spectral_scores.txt  zernike_scores.txt
example_data/spectral_output_data/: 7V7F_7V7D_FM.csv  7V7F_7V7D_p2p21.csv
example_data/well_conditioned_meshes/: list_entries.txt
example_data/zernike_data/: 6mka-A.inv  6mka.obj.grid  6mkg.obj.grid  fullatom_prediction.txt
example_data/zernike_output_data/: 6mkg-A.inv  fullatom_prediction.txt
shape_utils/: analysis_WKS.ipynb  create_mesh.py  example-shape.ipynb  functional_maps.py  meshes.py  models.py  predict_similarity.py  run.py  similarity_scores.py  spectral_descr.py  utils.py  zernike_descr.py
shape_utils/pyFM_pdbe/: functional.py
shape_utils/pyFM_pdbe/refine/: icp.py  zoomout.py
shape_utils/pyFM_pdbe/signatures/: HKS_functions.py  WKS_functions.py
shape_utils/pyhks/: hks.py
tests/: test_fuctional_maps.py  test_meshes.py  test_scores.py  test_utils.py  test_wks_descriptors.py  test_zernike_descr.py
(+5 files in other folders)
