[metadata]
name = shape_retrieval
author = Grisell Diaz Leines
author_email = gdiazleines@ebi.ac.uk
description = This python package calculates shape retrieval descriptors for proteins
version = 1.0.0
url = 
keywords =
  interfaces assemblies pisa json 
classifiers =
  Development Status :: ?
  Intended Audience :: Life Science/Structural Biology
  Intended Audience :: Developers
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
packages = find_namespace:
zip_safe: False
include_package_data = True
install_requires =
  requests
  lxml >=4.6.3,<5.0.0

[options.extras_require]
test =
  pytest

[options.entry_points]
console_scripts = 
  shape_retrieval = shape_utils.run:main

